# Zonz_project

./: README.md  nathan.txt  samy.txt
Projet_splashmem/: action.c  ancien page 1er.txt  exemple_cont.txt  fene_1_codecopilote.c  fermeture_fenetrefonctioneelle.txt  render_2.txt  render_3.txt  render_4.txt  render_v7.txt  ~$estion projet splash meme.docx
Projet_splashmem/splashmem-main/: README.md  oldmakefile_2.txt  run.sh
Projet_splashmem/splashmem-main/players/: CMakeLists.txt  old.Makefile  player1.c  player2.c  player3.c  player4.c
Projet_splashmem/splashmem-main/src/: actions.c.bak  main.h  player.c  render.c  render.c.bak  world.c
Zonz_project/: db.sqlite3  manage.py
Zonz_project/Create_player/: Makefile  create_player  create_player.c  create_player.h
Zonz_project/Django/: db.sqlite3  manage.py
Zonz_project/Projet_splashmem/: Question projet splash meme.docx  effacer le contenu de la 1er_f_main.txt  emeple_fonction_competr_au fur et maesure les pixel.txt  exe_fenetre_score.c  exemple_bome_5_tour.txt  fene_1.c  new_render.txt  new_render.txt.bak  render_effacer 1er fene.txt  render_old.txt
Zonz_project/Projet_splashmem/splashmem-main/: .clang-format  .gitignore  CMakeLists.txt  old.makefile  oldmakefile.txt  splashmem  values_output.txt
Zonz_project/Projet_splashmem/splashmem-main/src/: CMakeLists.txt  actions.c  actions.h  init.c  main.c  main.h  param.h  player.c  player.h  render.c  render.h  render_2.old  splash.h  world.c
Zonz_project/Zonz_site/: asgi.py  settings.py  urls.py  wsgi.py
Zonz_project/splashmem_django/: apps.py  views.py
(+23 files in other folders)
